# linker-lang

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
benches/: bench.rs
dev/: ROADMAP.md
docs/: API.md
docs/release/: v0.2.0.md  v1.0.0.md
examples/: from_codegen.rs  link_map.rs
src/: error.rs  image.rs  lib.rs  link.rs  object.rs
tests/: invalid.rs  properties.rs  serde.rs  workflow.rs
tests/support/: mod.rs
