# =============================================================================
#  R E P S   ·   linker-lang
# =============================================================================
[package]
name    = "linker-lang"
version = "0.2.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Static linking: symbol resolution, section merging, and relocation patching."

# Keywords (5 max)
keywords = ["compiler", "linker", "symbol", "relocation", "object"]

# Categories
categories = ["development-tools", "compilers"]

# Links
homepage      = "https://github.com/jamesgober/linker-lang"
repository    = "https://github.com/jamesgober/linker-lang"
documentation = "https://docs.rs/linker-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "linker_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# The standard library. Without it the crate is `#![no_std]` and needs only `alloc`.
std = []
# Serialization support for the linked image and the link error.
serde = ["dep:serde"]


# DEPENDENCIES
# #################################
[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# The backend whose compiled functions the end-to-end workflow tests and the `from_codegen`
# example feed into the linker. Used only by tests and examples, so it stays a dev-only
# dependency and the linker's public surface remains format-agnostic.
codegen-lang = "1"
# The IR the workflow builds before lowering it with `codegen-lang`. Resolves to the same
# published `1` that `codegen-lang` depends on, so a single `ir-lang` is shared.
ir-lang    = "1"
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1"
# Concrete format for the `serde` round-trip test.
serde_json = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
